# multi-agent-code-review

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  report.json  requirements.txt  resume_entry.txt  system_design_document.md
.github/workflows/: ci.yml
chroma_data/: chroma.sqlite3
chroma_test/: chroma.sqlite3
config/: agents.yaml  loader.py  settings.py
docker/: Dockerfile
docs/: api.md  architecture.md
evaluation/: dataset.py  metrics.py  runner.py
prompts/: classification.j2  repair_patch.j2  semantic_review.j2  test_generation.j2
scripts/: demo.py  run_cli.py  run_server.py
src/agents/: base.py  factory.py  mock_agents.py
src/api/: deps.py  router.py  server.py
src/knowledge/: embeddings.py  engine.py  schemas.py  seed_data.py  vector_store.py
src/llm/: base.py  deepseek_client.py  mock_client.py
src/models/: issue.py  patch.py  pr.py  report.py  review.py
src/orchestrator/: conditions.py  graph.py  state.py
src/tools/: base.py  linter_tool.py  registry.py  sandbox_tool.py  semgrep_tool.py  treesitter_tool.py
static/: index.html
tests/: conftest.py
tests/fixtures/: sample_code_with_bugs.py
tests/test_agents/: test_base.py  test_mock_agents.py
tests/test_integration/: test_full_pipeline.py
tests/test_knowledge/: test_embeddings.py  test_schemas.py  test_seed_data.py
tests/test_models/: test_issue.py  test_pr.py
tests/test_orchestrator/: test_graph.py  test_nodes.py  test_state.py
tests/test_repair/: test_coverage.py  test_verifier.py
tests/test_semantic/: test_agent.py
(+23 files in other folders)
